# digital_butler

./: pyproject.toml  requirements.txt
src/butler/: ai.py  brain.py  briefing.py  gitview.py  gui.py  main.py  netsec.py  payload.py  system.py  tasks.py  tidy.py  voice.py  web.py
src/digital_butler.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
tests/: test_tidy.py
